# CalmMindAI

./: .replit  CORE_COMPONENTS_EXPORT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_INTEGRATION.md  DEPLOYMENT_REQUIREMENTS.md  Instructions.md  MIGRATION_PACKAGE.md  PRODUCTION_SUMMARY.md  Procfile  README.md  RUNBOOK.md  SAFE_DEMOGRAPHICS_PROMPT.md  account_routes.py  add_coach_response_field.py  add_demographics_columns.py  add_journal_reminder_columns.py  add_notification_log_table.py  add_referral_fields.py  add_user_reflection_column.py  add_welcome_message_shown.py  admin_dashboard_fix.py  admin_dashboard_patch.py  admin_forms.py  admin_login_as_user.py  admin_models.py  admin_routes.py  admin_utils.py  app.py  app_clean.py  app_stable.py  app_update_preview_1747243640.html  app_update_preview_1747243640.txt  app_update_preview_1747244001.html  app_update_preview_1747244417.txt  app_update_preview_1747252230.html  app_update_preview_1747252246.txt  auth_cookies.txt  auth_security_test.py  azure_tts_service.py  basic_login.py  (+317 more)
'SQLALCHEMY_DATABASE_URI'] = 'postgresql:/: ...'
attached_assets/: Pasted--Below-is-a-series-of-conversation-I-had-with-my-daughter-who-is-mq-struggling-to-discipline-3-2-25--1744655613965.txt  Pasted--Calm-Journey-Full-Scenario-Mira-Dynamic-Therapist-Response-User-Journal-Scena-1745882845470.txt  Pasted--Cloning-from-https-github-com-pricekid-CalmMindAI-Checking-out-commit-17ad43287b8df2e258fe-1747412705058.txt  Pasted--Cloning-from-https-github-com-pricekid-CalmMindAI-Checking-out-commit-83d8b7daca83462abb36-1749949606002_1749949606003.txt  Pasted--Cloning-from-https-github-com-pricekid-CalmMindAI-Checking-out-commit-e2d38c6ee6acc28ed2cc-1749939569858_1749939569858.txt  Pasted--landing-html-DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta-name--1747352490621.txt  (+27 more)
(+226 files in other folders)
