[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "openai>=1.69.0",
    "psycopg2-binary>=2.9.10",
    "flask-wtf>=1.2.2",
    "werkzeug>=3.1.3",
    "wtforms>=3.2.1",
    "sqlalchemy>=2.0.40",
    "flask-mail>=0.10.0",
    "apscheduler>=3.11.0",
    "twilio>=9.5.1",
    "sendgrid>=6.11.0",
    "psutil>=7.0.0",
    "requests>=2.32.3",
    "beautifulsoup4>=4.13.3",
    "anthropic>=0.49.0",
    "gtts>=2.5.4",
    "azure-cognitiveservices-speech>=1.43.0",
]
