[tool.poetry]
name = "dearteddy"
version = "0.1.0"
description = "AI-powered mental wellness journaling application"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
gunicorn = "^21.0.0"
flask-sqlalchemy = "^3.0.3"
psycopg2-binary = "^2.9.5"
flask-login = "^0.6.2"
flask-wtf = "^1.1.1"
apscheduler = "^3.10.1"
openai = "^1.0.0"
twilio = "^8.0.0"
sendgrid = "^6.9.7"
flask-mail = "^0.9.1"
gtts = "^2.3.1"
flask-session = "^0.5.0"
azure-cognitiveservices-speech = "^1.25.0"
itsdangerous = "^2.1.2"
markdown = "^3.4.3"
email-validator = "^2.0.0"
anthropic = "^0.3.10"
pytz = "^2023.3"
flask-dance = "^7.0.0"
pywebpush = "^1.14.0"
beautifulsoup4 = "^4.12.2"
trafilatura = "^1.4.1"
oauthlib = "^3.2.2"
requests = "^2.28.2"
werkzeug = "^2.3.4"
wtforms = "^3.0.1"
psutil = "^5.9.4"
pyjwt = "^2.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"